# replisdk-rust

./: .gitignore  CHAGNELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: rust-checks-nightly.yaml  rust-checks.yaml
ci/: check-workspace.sh  local.sh
experimental/: CHAGNELOG.md  Cargo.toml
experimental-proc/: Cargo.toml
experimental-proc/src/: lib.rs
experimental/src/: lib.rs
experimental/src/platform/: mod.rs
experimental/src/platform/templates/: mod.rs
experimental/src/platform/templates/lookup/: manifests.rs  mod.rs  tests.rs
experimental/src/platform/templates/lookup/fixtures/: postgres.yaml  simple.store.yaml  stores.extended.yaml  stores.yaml
proc/: Cargo.toml
proc/src/: lib.rs
src/: lib.rs
src/agent/: mod.rs  models.rs
src/agent/framework/: conf.rs  configuration.example.yaml  constants.rs  injector.rs  mod.rs  node_id.rs  tests.rs  trace.rs
src/agent/framework/actions/: api.rs  executor.rs  handler.rs  mod.rs  registry.rs
src/agent/framework/actions/wellknown/: cluster.rs  mod.rs  test.rs  tests.rs
src/agent/framework/info/: mod.rs  node.rs  shards.rs  tests.rs
src/agent/framework/info/store_version/: chain.rs  command.rs  file.rs  fixed.rs  mod.rs
src/agent/framework/info/store_version/fixtures/: file_default.yaml
src/agent/framework/metrics/: action.rs  mod.rs  store.rs
src/agent/framework/proc/: builder.rs  init.rs  mod.rs  node_info_factory.rs  validate.rs
src/agent/framework/store/: cleaner.rs  encoding.rs  fixtures.rs  manage.rs  mod.rs  persist.rs  query.rs  schema.rs  tests.rs
src/agent/framework/store/migrations/: V1__initialise.sql
src/agent/framework/store/statements/: actions.rs  mod.rs
src/agent/models/: action.rs  attribute.rs  info.rs  mod.rs  shard.rs
src/context/: actix.rs  mod.rs  otel.rs
src/core/: mod.rs
src/core/models/: action.rs  api.rs  auth.rs  cluster.rs  mod.rs  naction.rs  namespace.rs  node.rs  oaction.rs  platform.rs
src/core/models/cluster/: declaration.rs  declaration_expand.rs  declaration_init.rs  discovery.rs  mod.rs  spec.rs
src/core/models/node/: attribute.rs  mod.rs  search.rs  tests.rs
src/platform/: mod.rs  models.rs
src/platform/framework/: context.rs  mod.rs
src/platform/framework/actix/: deprovision.rs  discover.rs  mod.rs  provision.rs  tests.rs
src/runtime/: mod.rs  tokio_conf.rs
src/runtime/actix_web/: conf.rs  mod.rs
src/runtime/shutdown/: mod.rs  tests.rs
src/runtime/telemetry/: logging.rs  mod.rs  opentel.rs  prom.rs  repli_sentry.rs
src/utils/: encoding.rs  mod.rs
src/utils/actix/: error.rs  mod.rs
src/utils/actix/metrics/: collect.rs  export.rs  mod.rs
src/utils/error/: mod.rs  slog.rs
src/utils/metrics/: error.rs  mod.rs
src/utils/trace/: error.rs  mod.rs
