[package]
name = "replisdk"
version = "0.1.1"
description = "All in one SDK to develop Replicante ecosystem components in Rust"

edition = "2021"
rust-version = "1.63"

homepage = "https://replicante.io"
license = "MIT"
repository = "https://github.com/replicante-io/replisdk-rust"

# Exclude CI/dev files from cargo packages.
exclude = [
  "/.github",
  "/ci",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
## (Replicante) Agent features
# Enable all agent related features.
agent = ["agent-models"]
# Enable definitions of agent data models.
agent-models = ["serde", "serde_json"]

## Platform features
# Enable all platform related features.
platform = ["platform-framework", "platform-models"]
# Enable Platform framework code.
platform-framework = ["anyhow", "async-trait", "futures", "platform-models", "slog"]
platform-framework_actix = ["actix-web", "platform-framework", "utils-actix_error"]
# Enable definitions of platform data models.
platform-models = ["serde", "serde_json"]

## RepliCore features
# Enable all Replicante Core related features.
replicore = ["replicore-models"]
# Enable definitions of replicore data models.
replicore-models = ["serde", "serde_json"]

## Runtime features.
# Enable access to the ShutdownManager object and core tokio-based runtime utilities.
runtime = ["anyhow", "futures", "slog", "thiserror", "tokio"]

## Various utilities and common tasks.
# Provides an `actix_web` error type that works with `anyhow::Error`.
utils-actix_error = ["actix-web", "anyhow", "serde_json", "thiserror"]

[dependencies]
actix-web = { version = "^4.3", optional = true }
anyhow = { version = "^1.0", features = ["backtrace"], optional = true }
async-trait = { version = "^0.1", optional = true }
futures = { version = "^0.3", optional = true }
serde = { version = "^1.0", optional = true, features = ["derive"] }
serde_json = { version = "^1.0", optional = true }
slog = { version = "^2.0", optional = true }
thiserror = { version = "^1.0", optional = true }
tokio = { version = "^1.0", optional = true, features = ["macros", "rt", "signal", "sync", "time"] }

# Always depend on the proc macros crate matching our exact version!
replisdk-proc = { version = "=0.1.1", path = "./proc"}

[package.metadata.docs.rs]
all-features = true

[workspace]
members = [
  "experimental",
  "experimental-proc",
  "proc",
]
