[package]
name = "replisdk-experimental-proc"
version = "0.1.0"
description = "Procedural macros crate for replisdk-experimental"

edition = "2021"
rust-version = "1.68"

homepage = "https://replicante.io"
license = "MIT"
repository = "https://github.com/replicante-io/replisdk-rust"

# Exclude CI/dev files from cargo packages.
exclude = [
  "/.github",
  "/ci",
]

[dependencies]
