[package]
name = "replisdk-experimental"
version = "0.1.1"
description = "Experimental features and additions to the Repicante SDK for rust"

edition = "2021"
rust-version = "1.67"

homepage = "https://replicante.io"
license = "MIT"
repository = "https://github.com/replicante-io/replisdk-rust"

# Exclude CI/dev files from cargo packages.
exclude = [
  "/.github",
  "/ci",
]

[features]
## Platform features
# Enable platform template utilities.
platform-templates = [
  "anyhow",
  "async-trait",
  "semver",
  "serde",
  "serde_json",
  "serde_yaml",
  "thiserror",
  "tokio",
]

[dependencies]
anyhow = { version = "^1.0", features = ["backtrace"], optional = true }
async-trait = { version = "^0.1", optional = true }
replisdk = { version = "^0.1", optional = true, path = "../"}
semver = { version = "^1.0", optional = true }
serde = { version = "^1.0", optional = true, features = ["derive"] }
serde_json = { version = "^1.0", optional = true }
serde_yaml = { version = "^0.9", optional = true }
thiserror = { version = "^1.0", optional = true }
tokio = { version = "^1.0", optional = true, features = ["rt"] }

# Always depend on the proc macros crate matching our exact version!
replisdk-experimental-proc = { version = "=0.1.0", path = "../experimental-proc"}

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
