[package]
name = "replisdk-proc"
version = "0.1.1"
description = "Procedural macros crate for replisdk"

edition = "2021"
rust-version = "1.70"

homepage = "https://replicante.io"
license = "MIT"
repository = "https://github.com/replicante-io/replisdk-rust"

# Exclude CI/dev files from cargo packages.
exclude = [
  "/.github",
  "/ci",
]

[dependencies]
